tree-sitter-starstream/grammar.js
/**
 * @file Starstream grammar for tree-sitter
 * @author Paima Studios
 * @license MIT/Apache-2.0
 */

/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

module.exports = grammar({
  name: "starstream",

  // Prevent keyword tokens from matching substrings of identifiers.
  word: ($) => $.identifier,

  // Meant to follow spec grammar closely.
  // Rules names prefixed with _ are hidden in the output syntax tree, best
  // used for choices between single children.
  rules: {
    program: ($) => seq(optional($.shebang), repeat($._definition)),

    // Definitions

    _definition: ($) =>
      choice(
        $.contract_definition,
        $.import_definition,
        $.function_definition,
        $.struct_definition,
        $.enum_definition,
        $.utxo_definition,
        $.abi_definition,
      ),

    contract_definition: ($) => seq("contract", ";"),

    import_definition: ($) =>
      seq(
        "import",
        choice($.import_named_items, $.import_namespace),
        "from",
        $.import_source,
        ";",
      ),

    import_named_items: ($) =>
      seq(
        "{",
        optional(
          seq($.import_named_item, repeat(seq(",", $.import_named_item))),
        ),
        optional(","),
        "}",
      ),

    import_named_item: ($) =>
      seq(
        field("imported", $.identifier),
        optional(seq("as", field("local", $.identifier))),
      ),

    import_namespace: ($) => $.identifier,

    import_source: ($) => choice($.import_wit_source, $.import_path_source),

    import_wit_source: ($) =>
      seq(
        field("namespace", $.identifier),
        ":",
        field("package", $.identifier),
        optional(seq("/", field("interface", $.identifier))),
      ),

    // Quoted relative path to another `.star` file: `"./helpers/math.star"`.
    import_path_source: ($) => $.string_literal,

    string_literal: ($) =>
      token(seq('"', repeat(choice(/[^"\\]/, seq("\\", /["\\nrt]/))), '"')),

    function_definition: ($) => seq(optional($.function_export), $._function),

    function_export: ($) => choice("script"),

    _function: ($) =>
      seq(
        "fn",
        $.identifier,
        "(",
        optional(
          seq($.function_parameter, repeat(seq(",", $.function_parameter))),
        ),
        optional(","),
        ")",
        optional(seq("->", $.type_annotation)),
        $.block,
      ),

    function_parameter: ($) =>
      seq(optional("pub"), $.identifier, ":", $.type_annotation),
    parameter: ($) => seq($.identifier, ":", $.type_annotation),

    struct_definition: ($) =>
      seq(
        "struct",
        $.identifier,
        "{",
        optional(seq($.struct_field, repeat(seq(",", $.struct_field)))),
        optional(","),
        "}",
      ),

    struct_field: ($) => seq($.identifier, ":", $.type_annotation),

    enum_definition: ($) =>
      seq(
        "enum",
        $.identifier,
        "{",
        optional(seq($.enum_variant, repeat(seq(",", $.enum_variant)))),
        optional(","),
        "}",
      ),

    enum_variant: ($) =>
      seq(
        $.identifier,
        optional(
          choice($.enum_variant_tuple_payload, $.enum_variant_struct_payload),
        ),
      ),

    enum_variant_tuple_payload: ($) =>
      seq(
        "(",
        optional(seq($.type_annotation, repeat(seq(",", $.type_annotation)))),
        optional(","),
        ")",
      ),

    enum_variant_struct_payload: ($) =>
      seq(
        "{",
        optional(seq($.struct_field, repeat(seq(",", $.struct_field)))),
        optional(","),
        "}",
      ),

    utxo_definition: ($) =>
      seq("utxo", $.identifier, "{", repeat($._utxo_part), "}"),

    _utxo_part: ($) =>
      choice($.storage_utxo_part, $.fn_utxo_part, $.abi_impl_utxo_part),

    storage_utxo_part: ($) => seq("storage", "{", repeat($.utxo_global), "}"),

    utxo_global: ($) =>
      seq("let", "mut", $.identifier, ":", $.type_annotation, ";"),

    fn_utxo_part: ($) => seq(optional(choice("main", "pub")), $._function),

    abi_impl_utxo_part: ($) =>
      seq("impl", $.identifier, "{", repeat($.impl_part), "}"),

    impl_part: ($) => choice($._function),

    abi_definition: ($) =>
      seq("abi", $.identifier, "{", repeat($._abi_part), "}"),

    _abi_part: ($) =>
      choice($.event_definition, $.effect_definition, $.abi_fn_declaration),

    event_definition: ($) =>
      seq(
        "event",
        $.identifier,
        "(",
        optional(seq($.parameter, repeat(seq(",", $.parameter)))),
        optional(","),
        ")",
        ";",
      ),

    effect_definition: ($) =>
      seq(
        "effect",
        $.identifier,
        "(",
        optional(seq($.parameter, repeat(seq(",", $.parameter)))),
        optional(","),
        ")",
        optional(seq("->", $.type_annotation)),
        ";",
      ),

    abi_fn_declaration: ($) =>
      seq(
        "fn",
        $.identifier,
        "(",
        optional(seq($.parameter, repeat(seq(",", $.parameter)))),
        optional(","),
        ")",
        optional(seq("->", $.type_annotation)),
        ";",
      ),

    // Type syntax

    type_annotation: ($) =>
      choice(
        seq(
          $.scoped_name,
          optional(
            seq(
              "<",
              $.type_annotation,
              repeat(seq(",", $.type_annotation)),
              optional(","),
              ">",
            ),
          ),
        ),
        $.tuple_type,
      ),

    // Anonymous tuple type: `(A, B)`. Always at least two elements.
    tuple_type: ($) =>
      seq(
        "(",
        $.type_annotation,
        ",",
        $.type_annotation,
        repeat(seq(",", $.type_annotation)),
        optional(","),
        ")",
      ),

    // Blocks and statements

    block: ($) => seq("{", repeat($._statement), optional($.expression), "}"),

    _statement: ($) =>
      choice(
        $.variable_declaration,
        $.assignment,
        $.while_statement,
        $.return_statement,
        $.resume_statement,
        $.try_with_statement,
        $._expression_statement,
      ),

    variable_declaration: ($) =>
      seq(
        "let",
        optional("pub"),
        optional("mut"),
        $.pattern,
        optional(seq(":", $.type_annotation)),
        "=",
        $.expression,
        optional(seq("else", $.block)),
        ";",
      ),

    assignment: ($) => seq($.identifier, "=", $.expression, ";"),

    while_statement: ($) => seq("while", "(", $.expression, ")", $.block),

    return_statement: ($) => seq("return", optional($.expression), ";"),

    resume_statement: ($) => seq("resume", ";"),

    try_with_statement: ($) =>
      seq(
        "try",
        $.block,
        repeat(
          seq("with", $.tuple_pattern, $.block),
        ),
      ),

    _expression_statement: ($) => seq($.expression, ";"),

    // Expressions

    expression: ($) =>
      choice(
        $._postfix_expression,

        prec.left(7, seq("!", $.expression)),
        prec.left(7, seq("-", $.expression)),

        prec.left(6, seq($.expression, "*", $.expression)),
        prec.left(6, seq($.expression, "/", $.expression)),
        prec.left(6, seq($.expression, "%", $.expression)),

        prec.left(5, seq($.expression, "+", $.expression)),
        prec.left(5, seq($.expression, "-", $.expression)),

        prec.left(4, seq($.expression, "<", $.expression)),
        prec.left(4, seq($.expression, "<=", $.expression)),
        prec.left(4, seq($.expression, ">", $.expression)),
        prec.left(4, seq($.expression, ">=", $.expression)),

        prec.left(3, seq($.expression, "==", $.expression)),
        prec.left(3, seq($.expression, "!=", $.expression)),

        prec.left(2, seq($.expression, "&&", $.expression)),

        prec.left(1, seq($.expression, "||", $.expression)),
      ),

    // Postfix expressions: function calls and field access
    _postfix_expression: ($) =>
      seq($._primary_expression, repeat(choice($.arguments, $.field_access))),

    arguments: ($) =>
      seq(
        "(",
        optional(
          seq($.expression, repeat(seq(",", $.expression)), optional(",")),
        ),
        ")",
      ),

    field_access: ($) => seq(".", $.identifier),

    // Primary expressions
    _primary_expression: ($) =>
      choice(
        seq("(", $.expression, ")"),
        $.tuple_expression,

        // Ambiguity: `match foo { patterns }` vs `match foo { struct fields } { patterns }`.
        // In this case, identifier has priority. Use parens to get struct literal.
        prec(1, $.scoped_name),

        $.integer_literal,
        $.boolean_literal,
        $.unit_literal,
        $.struct_constructor,
        $.disclose_expression,
        $.emit_expression,
        $.raise_expression,
        $.runtime_expression,
        $.block,
        $.yield_expression,
        $.if_expression,
        $.match_expression,
      ),

    // Anonymous tuple: `(a, b)`. Always at least two elements; `(a)` is a
    // grouping and `()` is the unit literal.
    tuple_expression: ($) =>
      seq(
        "(",
        $.expression,
        ",",
        $.expression,
        repeat(seq(",", $.expression)),
        optional(","),
        ")",
      ),

    scoped_name: ($) => seq($.identifier, repeat(seq("::", $.identifier))),

    struct_constructor: ($) =>
      seq(
        $.scoped_name,
        "{",
        optional(
          seq(
            $.struct_field_initializer,
            repeat(seq(",", $.struct_field_initializer)),
            optional(","),
          ),
        ),
        "}",
      ),

    struct_field_initializer: ($) => seq($.identifier, ":", $.expression),

    disclose_expression: ($) =>
      seq("disclose", "(", field("value", $.expression), ")"),

    emit_expression: ($) =>
      seq("emit", field("callee", $._primary_expression), $.arguments),

    raise_expression: ($) =>
      seq("raise", field("callee", $._primary_expression), $.arguments),

    runtime_expression: ($) =>
      seq("runtime", field("callee", $._primary_expression), $.arguments),

    yield_expression: ($) =>
      seq(
        "yield",
        "(",
        optional(seq($.identifier, repeat(seq(",", $.identifier)))),
        optional(","),
        ")",
      ),

    if_expression: ($) =>
      prec.right(seq(
        // First `if` branch.
        "if",
        $._if_condition,
        $.block,
        // Subsequent `else if` branches.
        repeat(seq("else", "if", $._if_condition, $.block)),
        // Final `else` branch.
        optional(seq("else", $.block)),
      )),

    _if_condition: ($) => choice(seq("(", $.expression, ")"), $.is_condition),

    is_condition: ($) => seq($.identifier, "is", $.identifier),

    match_expression: ($) =>
      seq(
        "match",
        $.expression,
        "{",
        optional(seq($.match_arm, repeat(seq(",", $.match_arm)))),
        optional(","),
        "}",
      ),

    match_arm: ($) => seq($.pattern, "=>", $.block),

    // Patterns

    pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.literal_pattern,
        $.struct_pattern,
        $.tuple_pattern,
        $.anonymous_tuple_pattern,
        $.scoped_name,
      ),

    wildcard_pattern: ($) => "_",

    literal_pattern: ($) =>
      choice($.integer_literal, $.boolean_literal, $.unit_literal),

    struct_pattern: ($) =>
      seq(
        $.scoped_name,
        "{",
        optional(
          seq($.struct_field_pattern, repeat(seq(",", $.struct_field_pattern))),
        ),
        optional(","),
        "}",
      ),

    struct_field_pattern: ($) =>
      choice(
        seq($.identifier, ":", $.pattern),
        alias($.identifier, $.struct_field_pattern_name),
      ),

    tuple_pattern: ($) =>
      seq(
        $.scoped_name,
        "(",
        optional(seq($.pattern, repeat(seq(",", $.pattern)))),
        optional(","),
        ")",
      ),

    // Anonymous tuple pattern: `(a, b)`. Always at least two elements.
    anonymous_tuple_pattern: ($) =>
      seq(
        "(",
        $.pattern,
        ",",
        $.pattern,
        repeat(seq(",", $.pattern)),
        optional(","),
        ")",
      ),

    // Literals and other terminals
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    integer_literal: ($) =>
      choice(/0x[0-9a-fA-F]+/, /0o[0-7]+/, /0b[01]+/, /[0-9]+/),
    boolean_literal: ($) => choice("true", "false"),
    unit_literal: ($) => seq("(", ")"),

    // Comments
    shebang: ($) => token(seq("#!", /.*/)),
    doc_comment: ($) => token(seq("///", /.*/)),
    comment: ($) =>
      token(
        choice(seq("//", /.*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/")),
      ),
  },
  conflicts: ($) => [],
  extras: ($) => [/\s/, $.comment, $.doc_comment],
});
